fix scroll jump issue

--- a/ethwatch-site/src/features/eventList/EventList.module.css
+++ b/ethwatch-site/src/features/eventList/EventList.module.css
@@ -32,6 +32,7 @@ table.settings tr:first-child td {
 	max-height: 500px;
 	overflow-y: scroll;
 	overflow-x: hidden;
+	overflow-anchor: none; /* solves the viewport scroll position jumping when events are added */
 }
 
 .errorList {
